--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -5640,6 +5640,50 @@ comments of @var{message} to the value @var{extracted_comments}, a multiline
 string, ending in a newline, or a non-@code{NULL} empty string.
 @end deftypefun
 
+@deftypefun {const char *} po_message_prev_msgctxt (po_message_t @var{message})
+The @code{po_message_prev_msgctxt} function returns the previous
+@code{msgctxt}, the previous context of @var{message}.  Return
+@code{NULL} for a message that does not have a previous context.
+@end deftypefun
+
+@deftypefun {void} po_message_set_prev_msgctxt (po_message_t @var{message},@
+                   const char *@var{prev_msgctxt})
+The @code{po_message_set_prev_msgctxt} function changes the previous
+@code{msgctxt}, the context of the message, to the value provided
+through @var{prev_msgctxt}.  The value @code{NULL} removes the stored
+previous msgctxt.
+@end deftypefun
+
+@deftypefun {const char *} po_message_prev_msgid (po_message_t @var{message})
+The @code{po_message_prev_msgid} function returns the previous
+@code{msgid} (untranslated English string) of @var{message}, or
+@code{NULL} if there is no previous @code{msgid} stored.
+@end deftypefun
+
+@deftypefun {void} po_message_set_prev_msgid (po_message_t @var{message},@
+                   const char *@var{prev_msgid})
+The @code{po_message_set_prev_msgid} function changes the previous
+@code{msgid} (untranslated English string) of @var{message} to the value
+provided through @var{prev_msgid}, or removes the message when it is
+@code{NULL}.
+@end deftypefun
+
+@deftypefun {const char *} po_message_prev_msgid_plural (po_message_t @var{message})
+The @code{po_message_prev_msgid_plural} function returns the previous
+@code{msgid_plural} (untranslated English plural string) of
+@var{message}, a message with plurals, or @code{NULL} for a message
+without plural without any stored previous @code{msgid_plural}.
+@end deftypefun
+
+@deftypefun {void} po_message_set_prev_msgid_plural (po_message_t @var{message},@
+                   const char *@var{prev_msgid_plural})
+The @code{po_message_set_prev_msgid_plural} function changes the
+previous @code{msgid_plural} (untranslated English plural string) of a
+message to the value provided through @var{prev_msgid_plural}, or
+removes the stored previous @code{msgid_plural} if @code{NULL} is
+provided as @var{prev_msgid_plural}.
+@end deftypefun
+
 @deftypefun {int} po_message_is_obsolete (po_message_t @var{message})
 The @code{po_message_is_obsolete} function returns true when @var{message}
 is marked as obsolete.
