--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.20.1 - May 2019
+
+* Important bug fix:
+  - Fixed a wrong shared library versioning of libintl.so.
+
 Version 0.20 - May 2019
 
 * Support for reproducible builds:
